# ReferenceGeant4

./: 1_compileAndRun.sh  2_compileOnly.sh  3_runOnly.sh  CMakeLists.txt
Analysis/: CMakeLists.txt
Analysis/include/: sdp_anaInteraction.hh  sdp_anaTrack.hh
Analysis/src/: sdp_anaInteraction.cc  sdp_anaTrack.cc
Generator/: CMakeLists.txt
Generator/include/: sdp_primaryGeneratorAction.hh
Generator/src/: sdp_primaryGeneratorAction.cc
Geometry/: CMakeLists.txt
Geometry/include/: sdp_detectorConstruction.hh  sdp_materials.hh
Geometry/src/: sdp_detectorConstruction.cc  sdp_materials.cc
JupyterTests/: test_analysis.ipynb
Macros/: initialize.mac  initialize_vis.mac
Main/: CMakeLists.txt  sdp_main.cc
PhysicsList/: CMakeLists.txt
PhysicsList/include/: sdp_physicsList.hh
PhysicsList/src/: sdp_physicsList.cc
Processing/: CMakeLists.txt
Processing/include/: sdp_actionInitialization.hh  sdp_eventAction.hh  sdp_runAction.hh  sdp_steppingAction.hh
Processing/src/: sdp_actionInitialization.cc  sdp_eventAction.cc  sdp_runAction.cc  sdp_steppingAction.cc
